Fixed IE bug - overflow on header and carousel, that was affecting sticky header

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -174,6 +174,12 @@ h5 {
   line-height    : 1.1;
 }
 
+// Fix for IE bug where header/carousel x-overflowed (set on entire page so
+// that does not affect sticky header behaviour)
+#page-content {
+  overflow: hidden;
+}
+
 //=====================================
 // MAJOR PAGE SECTIONS
 //=====================================
